# src/routers/index.ts
@@ -2,11 +2,13 @@ import Router from "express";
 import healthRouter from "./health.route";
 import jobsRouter from "./jobs.route";
 import talentRouter from "./talents.route";
+import screeningRouter from "./screening.route";
 
 const router = Router();
 
 router.use("/health", healthRouter);
 router.use("/jobs", jobsRouter);
 router.use("/talents", talentRouter);
+router.use("/screening", screeningRouter);
 
 export default router;
